kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: palestine-dep
  namespace: palestine-ns

spec:
  replicas: 2
  selector:
    matchLabels:
      free: palestine

  template:
    metadata:
      labels:
        free: palestine

    spec:
      containers:
        - name: palestine
          image: mustafa3li/palestine:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "2048m"
              memory: "4048Mi"
            requests:
              cpu: "1024m"
              memory: "2048Mi"
