kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-pod
  namespace: palestine-ns
  labels:
    app: httpd

spec:
  containers:
  - name: httpd-pod
    image: httpd:latest

    ports:
    - containerPort: 5000
    resources:
      limits:
        cpu: "2048m"
        memory: "4048Mi"
      requests:
        cpu: "1024m"
        memory: "2048Mi"
