kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: palestine-svc

spec:
  selector:
    app: palestine-pod
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
