kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: palestine-ingress
  namespace: palestine-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: palestine.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: palestine-svc
              port:
                number: 8000
        - path: /httpd
          pathType: Prefix
          backend:
            service:
              name: httpd-svc
              port:
                number: 5000
